queue-master/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    name: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: queue-master
